[gd_scene load_steps=23 format=3 uid="uid://dddutcjjycgmg"]

[ext_resource type="Script" path="res://scenes/enemies/bear.gd" id="1_cechf"]
[ext_resource type="Texture2D" uid="uid://co2nu063x80cb" path="res://graphics/animals/bear.png" id="1_sccqv"]
[ext_resource type="AudioStream" uid="uid://dsh3uv8yboc74" path="res://sounds/bear-roar.mp3" id="3_gsr10"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sjqrd"]
atlas = ExtResource("1_sccqv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8dih"]
atlas = ExtResource("1_sccqv")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3ne7"]
atlas = ExtResource("1_sccqv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxrlx"]
atlas = ExtResource("1_sccqv")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lkpd"]
atlas = ExtResource("1_sccqv")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2yas"]
atlas = ExtResource("1_sccqv")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_poer4"]
atlas = ExtResource("1_sccqv")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkrtx"]
atlas = ExtResource("1_sccqv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8owhp"]
atlas = ExtResource("1_sccqv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5lc1"]
atlas = ExtResource("1_sccqv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjqpa"]
atlas = ExtResource("1_sccqv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv1tb"]
atlas = ExtResource("1_sccqv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agpn4"]
atlas = ExtResource("1_sccqv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugara"]
atlas = ExtResource("1_sccqv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_raawj"]
atlas = ExtResource("1_sccqv")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n7a0"]
atlas = ExtResource("1_sccqv")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bctgf"]
atlas = ExtResource("1_sccqv")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7fibo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjqrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8dih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3ne7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxrlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lkpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2yas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poer4")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkrtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8owhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5lc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjqpa")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv1tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agpn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugara")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raawj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n7a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bctgf")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ov6t3"]
radius = 6.0

[node name="Bear" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_cechf")

[node name="BearSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_7fibo")
animation = &"attack"
frame = 6
frame_progress = 1.0

[node name="BearCollision" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -10)
polygon = PackedVector2Array(-10, 7, -6, 6, 1, 5, 3, 6, 5, 5, 8, 5, 11, 7, 10, 10, 6, 11, 5, 15, -9, 15, -10, 10)

[node name="NoticeArea" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NoticeArea"]
position = Vector2(0, 1)
polygon = PackedVector2Array(4, 6, 17, -5, 31, -9, 35, -3, 37, 1, 38, 5, 38, 10, 37, 14, 35, 18, 29, 23, 16, 17)

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(7, 12)
shape = SubResource("CircleShape2D_ov6t3")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BearSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gsr10")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
